Add README.md
Use docker-compose to run the application